added translations and languages
